# Smart-Traffic-Management-System

./: .env.example  .gitignore  README.md  __init__.py  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: README  env.py
alembic/versions/: 0001_initial_schema.py
backend/: main.py
backend/api/routes/: analytics.py  api.py  cameras.py  emergencies.py  plates.py  signals.py  traffic.py
backend/api/schemas/: analytics.py  base.py  camera.py  emergency.py  plate.py  signal.py  traffic.py
backend/core/: detector.py  tracker.py
config/: __init__.py  logging_config.py  settings.py
database/: __init__.py  base.py  deps.py  session.py
database/models/: __init__.py  analytics_hourly.py  camera.py  emergency_event.py  number_plate.py  signal_record.py  system_config.py  traffic_record.py  vehicle.py
database/repositories/: __init__.py  analytics.py  base.py  camera.py  emergency_event.py  number_plate.py  signal_record.py  traffic_record.py
docs/: phase1_requirement_analysis.md  phase2_literature_review.md  phase3_system_design.md  risk_analysis.md  use_cases.md
frontend/: api_client.py  app.py  requirements.txt
frontend/views/: analytics_view.py  cameras_view.py  emergencies_view.py
scripts/: download_sample_video.py  download_weights.py  seed_db.py  seed_helpers.py  setup_env.py
tests/: conftest.py
tests/db/: test_models.py  test_repositories.py
tests/integration/: test_api.py
tests/unit/: test_detector.py  test_tracker.py
